--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
         </div>
  
         <div class="social-icons-container">
-            <a href="https://www.tiktok.com/@TUO_PROFILO" target="_blank" class="social-icon tiktok"><img src="assets/tiktok.svg" alt="TikTok"></a>
+            <a href="https://www.tiktok.com/@TUO_PROFILO" target="_blank" class="social-icon tiktok"><img src="assets/tiktok.png" alt="TikTok"></a>
             <a href="https://twitter.com/TUO_PROFILO" target="_blank" class="social-icon x-logo"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" width="50px" height="50px" fill="#FFFFFF"><path d="M 13.085938 13 L 21.023438 13 L 26.660156 21.009766 L 33.5 13 L 36 13 L 27.789062 22.613281 L 37.914062 37 L 29.978516 37 L 23.4375 27.707031 L 15.5 37 L 13 37 L 22.308594 26.103516 L 13.085938 13 z M 16.914062 15 L 31.021484 35 L 34.085938 35 L 19.978516 15 L 16.914062 15 z"/></svg></a>
             <a href="https://www.facebook.com/TUO_PROFILO" target="_blank" class="social-icon facebook"><img src="assets/facebook.svg" alt="Facebook"></a>
             <a href="https://www.instagram.com/TUO_PROFILO" target="_blank" class="social-icon instagram"><img src="assets/instagram.svg" alt="Instagram"></a>
